[package]
name = "maomi-introduction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "maomi-introduction-server"
path = "src/main.rs"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
bincode = "1.3"
base64 = "0.13"
maomi = { version = "0.4", features = ["prerendering", "prerendering-apply"], path = "../maomi/maomi" }
maomi-dom = { version = "0.4", features = ["prerendering", "prerendering-apply"], path = "../maomi/maomi-dom" }
log = "0.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "History",
  "Location",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.maomi]
css_out_dir = "pkg"
# css-out-mode = "debug"
