[package]
name = "maomi-introduction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "maomi-introduction-server"
path = "src/main.rs"

[features]
default = []
server-side-rendering = ["maomi-dom/prerendering", "maomi-dom/prerendering-apply"]

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
bincode = "1.3"
base64 = "0.13"
maomi = "0.4"
maomi-dom = "0.4"
log = "0.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "History",
  "Location",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4', '-g']

[package.metadata.maomi]
css-out-dir = "pkg"
# css-out-mode = "debug"

# use local maomi repo
[patch.crates-io]
"maomi" = { path = "../maomi/maomi" }
"maomi-dom" = { path = "../maomi/maomi-dom" }
"maomi-dom-macro" = { path = "../maomi/maomi-dom-macro" }
"maomi-macro" = { path = "../maomi/maomi-macro" }
"maomi-skin" = { path = "../maomi/maomi-skin" }
"maomi-tools" = { path = "../maomi/maomi-tools" }
"maomi-tree" = { path = "../maomi/maomi-tree" }
